--- a/main.html
+++ b/main.html
@@ -11,8 +11,8 @@
     <div class="logo">HackathonBGSU</div>
     <nav>
       <a href="#">Home</a>
-      <a href="#">About</a>
-      <a href="#">Services</a>
+      <a href="#">Plants</a>
+      <a href="#">Tips</a>
       <a href="#">Contact</a>
     </nav>
   </div>
