created all flower flashcards

--- a/careCards.html
+++ b/careCards.html
@@ -141,20 +141,130 @@
         </div>
     </div>
 <!--End of herb flashcards-->
+
 <!--Start of flower flashcards-->
+
 <div class="flashcard" onclick="flipCard(this)" name="Flower">
     <div class="flashcard-inner">
         <div class="flashcard-front">
             Milkweed
         </div>
         <div class="flashcard-back">
-            Partial to full sun<br>
-            Moderate water<br>
-            Slightly toxic to pets<br>
-            Grows best in Northeast U.S.
+            Full sun<br>
+            Low water - drought tolerant<br>
+            Toxic to pets<br>
         </div>
     </div>
 </div>
+<div class="flashcard" onclick="flipCard(this)" name="Flower">
+    <div class="flashcard-inner">
+        <div class="flashcard-front">
+            Lavender
+        </div>
+        <div class="flashcard-back">
+            Full sun<br>
+            Low water - well-drained soil<br>
+            Mildly toxic to pets<br>
+        </div>
+    </div>
+</div>
+<div class="flashcard" onclick="flipCard(this)" name="Flower">
+    <div class="flashcard-inner">
+        <div class="flashcard-front">
+            Sweet Pea
+        </div>
+        <div class="flashcard-back">
+            Full sun to partial shade<br>
+            Moderate water<br>
+            Seeds are toxic to pets<br>
+        </div>
+    </div>
+</div>
+<div class="flashcard" onclick="flipCard(this)" name="Flower">
+    <div class="flashcard-inner">
+        <div class="flashcard-front">
+            Alliums
+        </div>
+        <div class="flashcard-back">
+            Full sun<br>
+            Low to moderate water<br>
+            Toxic to pets<br>
+        </div>
+    </div>
+</div>
+<div class="flashcard" onclick="flipCard(this)" name="Flower">
+    <div class="flashcard-inner">
+        <div class="flashcard-front">
+            Blue Bonnets
+        </div>
+        <div class="flashcard-back">
+            Full sun<br>
+            Low water<br>
+            Toxic to pets<br>
+        </div>
+    </div>
+</div>
+<div class="flashcard" onclick="flipCard(this)" name="Flower">
+    <div class="flashcard-inner">
+        <div class="flashcard-front">
+            Carnations
+        </div>
+        <div class="flashcard-back">
+            Full to partial sun<br>
+            Moderate water<br>
+            Mildly toxic to pets<br>
+        </div>
+    </div>
+</div>
+<div class="flashcard" onclick="flipCard(this)" name="Flower">
+    <div class="flashcard-inner">
+        <div class="flashcard-front">
+            Bleeding Hearts
+        </div>
+        <div class="flashcard-back">
+            Partial shade<br>
+            Moderate water - keep moist<br>
+            Toxic to pets<br>
+        </div>
+    </div>
+</div>
+<div class="flashcard" onclick="flipCard(this)" name="Flower">
+    <div class="flashcard-inner">
+        <div class="flashcard-front">
+            Hydrangea
+        </div>
+        <div class="flashcard-back">
+            Morning sun to partial shade<br>
+            Moderate water - do not let soil dry completely<br>
+            Toxic to pets<br>
+        </div>
+    </div>
+</div>
+<div class="flashcard" onclick="flipCard(this)" name="Flower">
+    <div class="flashcard-inner">
+        <div class="flashcard-front">
+            Daylily
+        </div>
+        <div class="flashcard-back">
+            Full to partial sun<br>
+            Moderate water<br>
+            Toxic to cats<br>
+        </div>
+    </div>
+</div>
+<div class="flashcard" onclick="flipCard(this)" name="Flower">
+    <div class="flashcard-inner">
+        <div class="flashcard-front">
+            Black-Eyed Susan
+        </div>
+        <div class="flashcard-back">
+            Full sun<br>
+            Low to moderate water<br>
+            Non-toxic to pets<br>
+        </div>
+    </div>
+</div>
+<!--End of Flower Flashcards-->
 </div>
 
 
