finished fruits flashcards

--- a/careCards.html
+++ b/careCards.html
@@ -265,6 +265,76 @@
     </div>
 </div>
 <!--End of Flower Flashcards-->
+
+<!--Start of Fruits Flashcards-->
+<div class="flashcard" onclick="flipCard(this)" name="Fruit">
+    <div class="flashcard-inner">
+        <div class="flashcard-front">
+            Tomato
+        </div>
+        <div class="flashcard-back">
+            Full sun<br>
+            18"-36" between plants<br>
+            Water 1-2 times per week<br>
+            Toxic to pets (leaves, stems, and unripe fruits)<br>
+        </div>
+    </div>
+</div>
+<div class="flashcard" onclick="flipCard(this)" name="Fruit">
+    <div class="flashcard-inner">
+        <div class="flashcard-front">
+            Strawberry
+        </div>
+        <div class="flashcard-back">
+            Full sun<br>
+            12"-18" between plants<br>
+            Water 2-3 times per week<br>
+            Non-toxic to pets<br>
+        </div>
+    </div>
+</div>
+<div class="flashcard" onclick="flipCard(this)" name="Fruit">
+    <div class="flashcard-inner">
+        <div class="flashcard-front">
+            Blueberry
+        </div>
+        <div class="flashcard-back">
+            Full sun<br>
+            18"-24" between plants<br>
+            Water 2-3 times per week<br>
+            Non-toxic to pets<br>
+            Prefers acidic soil
+        </div>
+    </div>
+</div>
+<div class="flashcard" onclick="flipCard(this)" name="Fruit">
+    <div class="flashcard-inner">
+        <div class="flashcard-front">
+            Blackberry
+        </div>
+        <div class="flashcard-back">
+            Full sun<br>
+            2'-3' between plants<br>
+            Water 2-3 times per week<br>
+            Non-toxic to pets<br>
+        </div>
+    </div>
+</div>
+<div class="flashcard" onclick="flipCard(this)" name="Fruit">
+    <div class="flashcard-inner">
+        <div class="flashcard-front">
+            Lemon
+        </div>
+        <div class="flashcard-back">
+            Full sun<br>
+            12'-15' between plants<br>
+            Water 2-3 times per week<br>
+            Toxic to pets<br>
+        </div>
+    </div>
+</div>
+<!--End of Fruits Flashcards-->
+
 </div>
 
 
