--- a/careCards.html
+++ b/careCards.html
@@ -335,6 +335,86 @@
 </div>
 <!--End of Fruits Flashcards-->
 
+<!--Start of veggies flashcards-->
+<div class="flashcard" onclick="flipCard(this)" name="Veggie">
+    <div class="flashcard-inner">
+        <div class="flashcard-front">
+            Pea
+        </div>
+        <div class="flashcard-back">
+            Full sun to partial shade<br>
+            1"-2" between plants<br>
+            Water 2-3 times per week<br>
+            Non-toxic to pets<br>
+        </div>
+    </div>
+</div>
+<div class="flashcard" onclick="flipCard(this)" name="Veggie">
+    <div class="flashcard-inner">
+        <div class="flashcard-front">
+            Zucchini
+        </div>
+        <div class="flashcard-back">
+            Full sun<br>
+            2'-3' between plants<br>
+            Water 2-3 times per week<br>
+            Non-toxic to pets<br>
+        </div>
+    </div>
+</div>
+<div class="flashcard" onclick="flipCard(this)" name="Veggie">
+    <div class="flashcard-inner">
+        <div class="flashcard-front">
+            Squash
+        </div>
+        <div class="flashcard-back">
+            Full sun<br>
+            2'-3' between plants<br>
+            Water 2-3 times per week<br>
+            Non-toxic to pets<br>
+        </div>
+    </div>
+</div>
+<div class="flashcard" onclick="flipCard(this)" name="Veggie">
+    <div class="flashcard-inner">
+        <div class="flashcard-front">
+            Bell Pepper
+        </div>
+        <div class="flashcard-back">
+            Full sun<br>
+            18"-24" between plants<br>
+            Water 2-3 times per week<br>
+            Non-toxic to pets<br>
+        </div>
+    </div>
+</div>
+<div class="flashcard" onclick="flipCard(this)" name="Veggie">
+    <div class="flashcard-inner">
+        <div class="flashcard-front">
+            Garlic
+        </div>
+        <div class="flashcard-back">
+            Full sun<br>
+            4"-6" between plants<br>
+            Water 1-2 times per week<br>
+            Toxic to pets<br>
+        </div>
+    </div>
+</div>
+<div class="flashcard" onclick="flipCard(this)" name="Veggie">
+    <div class="flashcard-inner">
+        <div class="flashcard-front">
+            Lettuce
+        </div>
+        <div class="flashcard-back">
+            Full to partial sun<br>
+            6"-12" between plants<br>
+            Water 2-3 times per week<br>
+            Non-toxic to pets<br>
+        </div>
+    </div>
+</div>
+
 </div>
 
 
