fixed so top of flash cards no longer cut off

--- a/careCards.html
+++ b/careCards.html
@@ -9,7 +9,10 @@
         background-color: #63264A;
         margin: 0;
     }
-
+    div {
+        height:70%;
+        margin: 0 auto;
+    }
     .flashcard-container {
         display: flex;
         flex-wrap: wrap;
