--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
     <div class="logo">HackathonBGSU</div>
     <nav>
       <div class="dropdown">
-        <a href="#">Home</a>
+        <a href="main.html">Home</a>
       </div>
 
       <div class="dropdown">
@@ -34,7 +34,7 @@
       </div>
 
       <div class="dropdown">
-        <a href="#">Contact</a>
+        <a href="contact.html">Contact</a>
       </div>
     </nav>
   </div>
