messed with style things some more

--- a/tips.html
+++ b/tips.html
@@ -7,9 +7,16 @@
 
     <style>
 
+        body {
+            margin: 0;
+            background-color: rgb(243, 249, 210);
+        }
+
         h1 {
             font-family: 'Garamond';
+            font-size: 40px;
             text-align: center;
+            background-color: rgb(192, 214, 132);
         }
 
         h2 {
@@ -33,7 +40,7 @@
         nav ul li a {
             text-decoration: none;
             color: #333;
-            font-size: 24px;
+            font-size: 22px;
         }
 
         nav ul li a:hover {
@@ -58,7 +65,7 @@
 
     <!-- TODO: add actual information on garden setup-->
     <section id="garden setup">
-        <h2>Garden Setup</h2>
+        <h2>Garden Setup &#127806</h2>
         <p>[this is filler text about setting up an outdoor garden]</p>
     </section>
 
