moved stuff around

--- a/ContactPage/thankyou.html
+++ b/ContactPage/thankyou.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8" />
   <title>Thank You</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="../style.css" />
 </head>
 <body>
     <div class="topbar">
         <div class="logo">HackathonBGSU</div>
         <nav>
           <div class="dropdown">
-            <a href="main.html">Home</a>
+            <a href="../main.html">Home</a>
           </div>
     
           <div class="dropdown">
