--- a/main.html
+++ b/main.html
@@ -41,7 +41,7 @@
       </div>
 
       <div class="dropdown">
-        <a href="contact.html">Contact</a>
+        <a href="ContactPage/contact.html">Contact</a>
       </div>
     </nav>
   </div>
@@ -74,6 +74,6 @@
     // Basic JavaScript functionality can be added here
     console.log("Top bar website loaded");
   </script>
-  <script src="search.js"></script>
+  <script src="SearchFunction/search.js"></script>
 </body>
 </html>
